--- a/templates/base.html
+++ b/templates/base.html
@@ -7,10 +7,14 @@
     <title>JobApply</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/navbar.css' %}">
+    <link rel="stylesheet" href="{% static 'css/landing.css' %}">
   </head>
   <body class="bg-body">
 
-  {% include 'includes/navbar.html' %}
+    {% block navbar %}
+      {% include 'includes/navbar.html' %}
+    {% endblock %}
+
 
     <main class="container py-4">
       {% if messages %}
