--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -1,3 +1,7 @@
+{% extends "base.html" %}
+
+{% block navbar %}{% endblock %}
+{% block content %}
 <nav class="navbar navbar-expand-lg navbar-dark border-bottom">
   <div class="container">
     <a class="navbar-brand" href="/">JobApply</a>
@@ -26,3 +30,4 @@
     </div>
   </div>
 </nav>
+{% endblock %}
