frontend: logout fix

--- a/templates/accounts/consent.html
+++ b/templates/accounts/consent.html
@@ -8,7 +8,7 @@
       <h1 class="h4 mb-2">Consent</h1>
 
       <p class="text-body-secondary">
-        - To use JobApply, you must confirm that you agree to give access to your Google account for authentication;<br>
+        - To use JobApply, you must confirm that you agree to grant access to your Google account and, only when enabled, selected Google services (e.g., Google Sheets, Google Calendar) to provide the requested features;<br>
         - The administration is not responsible for storing your personal data.
       </p>
 
