--- a/templates/landing.html
+++ b/templates/landing.html
@@ -25,8 +25,7 @@
     </div>
 
     <div class="col-12 col-lg-7">
-      <div class="card border-0 shadow-sm h-100 glass-card">
-        <div class="card-body p-4">
+      <div class="card border-0 shadow-sm h-100 glass-card">        <div class="card-body p-4">
           <h2 class="h5 mb-3">What you get</h2>
 
           <ul class="mb-4 text-body-secondary">
