--- a/templates/interviews/list.html
+++ b/templates/interviews/list.html
@@ -81,11 +81,11 @@
                 <div class="btn-group">
                   <a class="btn btn-sm btn-outline-primary"
                      href="{% url 'interviews:edit' it.pk %}">
-                    Edit
+                    ✏️ Edit
                   </a>
                   <a class="btn btn-sm btn-outline-danger"
                      href="{% url 'interviews:delete' it.pk %}">
-                    Delete
+                   🗑️ Delete
                   </a>
                 </div>
               </td>
