--- a/templates/interviews/list.html
+++ b/templates/interviews/list.html
@@ -29,7 +29,7 @@
             <th>Status</th>
             <th>Location</th>
             <th>Notes</th>
-            <th class="text-end">Actions</th>
+            <th class="text-end" ></th>
           </tr>
         </thead>
 
