services page fix

--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -10,7 +10,7 @@
       {% if user.is_authenticated %}
         <a class="btn btn-outline-light btn-sm nav-anim" href="/applications/">Applications</a>
         <a class="btn btn-outline-light btn-sm nav-anim" href="/interviews/">Interviews</a>
-        <a class="btn btn-outline-light btn-sm nav-anim" href="/reports/statistics/">Reports</a>
+        <a class="btn btn-outline-light btn-sm nav-anim" href="/reports/statistics/">Services</a>
         <a class="btn btn-outline-warning btn-sm nav-anim" href="/accounts/logout/">Logout</a>
       {% else %}
         <a class="btn btn-outline-light btn-sm nav-anim is-disabled" href="#" data-disabled="1" aria-disabled="true" tabindex="-1">
