--- a/templates/accounts/google_login_gate.html
+++ b/templates/accounts/google_login_gate.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block navbar %}{% endblock %}
+
 {% block content %}
 <div class="container mt-4" style="max-width: 520px;">
   <div class="card border-0 shadow-sm glass-card">
@@ -12,11 +14,16 @@
           {% csrf_token %}
           <input type="hidden" name="next" value="{{ next }}">
           <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
-          <div class="cf-turnstile" data-sitekey="{{ turnstile_site_key }}" data-theme="auto"></div>
+          <div class="cf-turnstile"
+               data-sitekey="{{ turnstile_site_key }}"
+               data-theme="auto"></div>
           <button class="btn btn-primary" type="submit">Continue</button>
         </form>
       {% else %}
-        <a class="btn btn-primary w-100" href="{% url 'google_login' %}?next={{ next|urlencode }}">Continue</a>
+        <a class="btn btn-primary w-100"
+           href="{% url 'google_oauth_login' %}?next={{ next|urlencode }}">
+          Continue
+        </a>
       {% endif %}
     </div>
   </div>
